# ihp-cabal-nix

./: .ghci  .gitignore  App.cabal  App.hp  App.prof  Main.hs  RootApplication.hs  cabal.project.local  default.nix  start
Application/: Schema.sql
Application/Migration/: 1640833343.sql  1640833370.sql
Application/Script/: TestScript.hs
Config/nix/: nixpkgs-config.nix
Web/: FrontController.hs  Routes.hs  Types.hs
Web/Controller/: Dogs.hs
Web/View/Dogs/: Edit.hs  Index.hs  New.hs  Show.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
