cabal-version:       2.2
name:                App
version:             0.1.0.0
build-type:          Simple

Flag Prod
    Description: Build for production
    Manual: True
    Default: False

common shared-extensions
  default-extensions:
    OverloadedStrings
    , NoImplicitPrelude
    , ImplicitParams
    , Rank2Types
    , DisambiguateRecordFields
    , NamedFieldPuns
    , DuplicateRecordFields
    , OverloadedLabels
    , FlexibleContexts
    , TypeSynonymInstances
    , FlexibleInstances
    , QuasiQuotes
    , TypeFamilies
    , PackageImports
    , ScopedTypeVariables
    , RecordWildCards
    , TypeApplications
    , DataKinds
    , InstanceSigs
    , DeriveGeneric
    , MultiParamTypeClasses
    , TypeOperators
    , DeriveDataTypeable
    , MultiWayIf
    , UndecidableInstances
    , BlockArguments
    , PartialTypeSignatures
    , LambdaCase
    , DefaultSignatures
    , EmptyDataDeriving
    , BangPatterns
    , BlockArguments
    , MultiWayIf
    , FunctionalDependencies
    , PartialTypeSignatures
    , StandaloneDeriving
    , DerivingVia

common shared-deps
  build-depends:
      base
    , classy-prelude
    , mono-traversable
    , transformers
    , directory
    , string-conversions
    , warp
    , wai
    , mtl
    , blaze-html
    , blaze-markup
    , wai-extra
    , http-types
    , inflections
    , text
    , postgresql-simple
    , wai-middleware-static
    , wai-util
    , bytestring
    , network-uri
    , uri-encode
    , aeson
    , wai-session
    , wai-session-clientsession
    , clientsession
    , pwstore-fast
    , vault
    , data-default
    , random-strings
    , uuid
    , time
    , attoparsec
    , ghc-prim
    , case-insensitive
    , haskell-src-meta
    , template-haskell
    , haskell-src-exts
    , interpolate
    , split
    , containers
    , http-media
    , cookie
    , process
    , typerep-map
    , basic-prelude
    , megaparsec
    , async
    , network
    , unliftio
    , unix
    , fsnotify
    , websockets
    , wai-websockets
    , regex-tdfa
    , binary
    , mime-mail
    , mime-mail-ses
    , smtp-mail
    , http-client
    , http-client-tls
    , resource-pool
    , unordered-containers
    , scientific
    , vector
    , wreq
    , cryptohash
    , base16-bytestring
    , deepseq
    , parser-combinators
    , ip
    , fast-logger
    , regex-pcre-builtin
    , pcre-utils
    , minio-hs
    , temporary
    , conduit-extra
    , wai-cors
    , lens
    , random
    , async-pool
    , hspec
    , cereal
    , cereal-text
    , neat-interpolation
    , unagi-chan
    , ihp

common shared-opts
  default-language:    Haskell2010
  if flag(Prod)
    ghc-options:
        -O2
        -threaded
  else
    ghc-options:
        -O0
        -threaded


executable App
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  hs-source-dirs:      . build Config

  main-is:             Main.hs
  other-modules:       RootApplication
                       Application.Helper.Controller
                       Application.Helper.View
                       Application.Script.TestScript
                       Application.Script.Prelude
                       Application.Script.RunJobs
                       Web.Types
                       Web.Routes
                       Web.FrontController
                       Web.Controller.Dogs
                       Web.Controller.Prelude
                       Web.Controller.Static
                       Web.View.Prelude
                       Web.View.Layout
                       Web.View.Dogs.Edit
                       Web.View.Dogs.Index
                       Web.View.Dogs.New
                       Web.View.Dogs.Show
                       Web.View.Static.Welcome
                       Generated.Types
                       Config


executable TestScript
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  main-is:             Application/Script/TestScript.hs
  hs-source-dirs:      . build Config

executable RunJobs
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  main-is:             Application/Script/RunJobs.hs
  hs-source-dirs:      . build Config
